@@ -2,6 +2,7 @@ opencv (2.4.9.1+dfsg-2) UNRELEASED; urgency=medium
 
   * Team upload.
   * Use HTTPS in Vcs-* fields.
+  * Disable opengl when building in armhf (in Ubuntu only)
 
  -- Mattia Rizzolo <mattia@debian.org>  Sun, 26 Jun 2016 15:12:33 +0000
 
